--- a/Config/server.ini
+++ b/Config/server.ini
@@ -12,3 +12,7 @@ antenna_url = http://192.168.0.2:8000/cgi-bin/luci/admin/ACU_Antenna
 antenna_url_login = http://192.168.0.2:8000/cgi-bin/luci/
 antenna_tk03_url = http://192.168.1.1
 antenna_tk03_Ip = 15103
+Tcp_03tk03_IP = 192.168.0.2
+Tcp_03tk03_Port = 15102
+code=utf-8
+recv=1024
